# opennet_fastapi

./: README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/model/: response.py
app/route/: greet.py
